Added username to user information and table, plus set email and username to unique.
