# src/main/resources/api.yaml
@@ -374,6 +374,9 @@ components:
         email:
           type: string
           description: The email address of the user.
+        username:
+          type: string
+          description: The username of the user.
         password:
           type: string
           description: The password of the user.
@@ -386,6 +389,7 @@ components:
           format: date-time
           description: The date and time the user was created.
       required:
+        - username
         - name
         - email
         - password
@@ -400,6 +404,9 @@ components:
         email:
           type: string
           description: The email address of the user.
+        username:
+          type: string
+          description: The username of the user.
         password:
           type: string
           description: The password of the user.
@@ -412,6 +419,7 @@ components:
         - name
         - email
         - password
+        - username
         - user_role
 
     Restaurant:
