# target/generated-sources/openapi/src/main/java/org/openapitools/model/UserInput.java
@@ -19,7 +19,7 @@ import javax.annotation.Generated;
  * UserInput
  */
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-03-27T13:18:10.696739+01:00[Europe/London]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-03-27T14:02:48.130213+01:00[Europe/London]")
 public class UserInput {
 
   @JsonProperty("name")
@@ -27,6 +27,9 @@ public class UserInput {
 
   @JsonProperty("email")
   private String email;
+
+  @JsonProperty("username")
+  private String username;
 
   @JsonProperty("password")
   private String password;
@@ -107,6 +110,25 @@ public class UserInput {
     this.email = email;
   }
 
+  public UserInput username(String username) {
+    this.username = username;
+    return this;
+  }
+
+  /**
+   * The username of the user.
+   * @return username
+  */
+  @NotNull 
+  @Schema(name = "username", description = "The username of the user.", requiredMode = Schema.RequiredMode.REQUIRED)
+  public String getUsername() {
+    return username;
+  }
+
+  public void setUsername(String username) {
+    this.username = username;
+  }
+
   public UserInput password(String password) {
     this.password = password;
     return this;
@@ -156,13 +178,14 @@ public class UserInput {
     UserInput userInput = (UserInput) o;
     return Objects.equals(this.name, userInput.name) &&
         Objects.equals(this.email, userInput.email) &&
+        Objects.equals(this.username, userInput.username) &&
         Objects.equals(this.password, userInput.password) &&
         Objects.equals(this.userRole, userInput.userRole);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(name, email, password, userRole);
+    return Objects.hash(name, email, username, password, userRole);
   }
 
   @Override
@@ -171,6 +194,7 @@ public class UserInput {
     sb.append("class UserInput {\n");
     sb.append("    name: ").append(toIndentedString(name)).append("\n");
     sb.append("    email: ").append(toIndentedString(email)).append("\n");
+    sb.append("    username: ").append(toIndentedString(username)).append("\n");
     sb.append("    password: ").append(toIndentedString(password)).append("\n");
     sb.append("    userRole: ").append(toIndentedString(userRole)).append("\n");
     sb.append("}");
